--- a/bower.json
+++ b/bower.json
@@ -18,5 +18,12 @@
   },
   "resolutions": {
     "jquery": "1.9.1 - 2"
+  },
+  "devDependencies": {
+    "angular-mocks": "^1.5.7",
+    "karma": "^0.4.6",
+    "karma-jasmine": "^1.0.2",
+    "jasmine-core": "^2.4.1",
+    "karma-chrome-launcher": "^1.0.1"
   }
 }
