--- a/package.json
+++ b/package.json
@@ -15,14 +15,26 @@
     "validator": "^5.4.0"
   },
   "devDependencies": {
+    "angular-mocks": "^1.5.7",
     "chai": "^3.5.0",
     "del": "^2.2.1",
     "dotenv": "^2.0.0",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.0",
     "gulp-jshint": "^2.0.1",
+    "jasmine-core": "^2.4.1",
     "jshint": "^2.9.2",
     "jshint-stylish": "^2.2.0",
+    "karma": "^1.1.1",
+    "karma-chrome-launcher": "^1.0.1",
+    "karma-coverage": "^1.1.0",
+    "karma-ie-launcher": "^1.0.0",
+    "karma-jasmine": "^1.0.2",
+    "karma-js-coverage": "^0.4.0",
+    "karma-ng-html2js-preprocessor": "^1.0.0",
+    "karma-ng-html2js-preprocessor-next": "^0.3.0",
+    "karma-phantomjs-launcher": "^1.0.1",
+    "karma-safari-launcher": "^1.0.0",
     "mocha": "^2.5.3",
     "nodemon": "^1.9.2"
   },
@@ -32,6 +44,7 @@
     "test": "mocha",
     "postinstall": "./node_modules/bower/bin/bower install",
     "upstream-rebase": "gulp lint && echo ... && git pull --rebase upstream dev && echo ... && gulp lint",
+    "justin-rebase": "gulp lint && echo ... && git pull --rebase code-overload dev && echo ... && gulp lint",
     "deploy-local": "npm run upstream-rebase && echo CODE OVERLOAD CONTRIBUTOR: Please go to localhost:5000 to make sure the site runs correctly && heroku local web"
   },
   "engines": {
